compiler/test/conformance/testdata/errors/27_option_bad_constructor.yz
main: {
    d : ["a": 1]
    r : d["a"]
    r match Foo => { print(r.value) }
}
